--- a/index.Rmd
+++ b/index.Rmd
@@ -1,14 +1,5 @@
 ---
 title: "Vast Challenge Assignment"
-description: Welcome to Ong Chee Hong Vast Challenge Assignment
 site: distill::distill_website
+listing: posts
 ---
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
-
-# Learn more about creating websites with Distill at:
-# https://rstudio.github.io/distill/website.html
-
-```
-
